Adds ModelMapper & configuration