@@ -3,54 +3,102 @@ package com.bookreviewplatform.userservice.service.custom;
 import com.bookreviewplatform.userservice.dto.UserDTO;
 import com.bookreviewplatform.userservice.dto.UserRequestDTO;
 import com.bookreviewplatform.userservice.entity.UserEntity;
+import com.bookreviewplatform.userservice.exception.DuplicateResourceException;
 import com.bookreviewplatform.userservice.exception.UserNotFoundException;
 import com.bookreviewplatform.userservice.payloads.StandardResponse;
 import com.bookreviewplatform.userservice.repository.UserRepository;
 import com.bookreviewplatform.userservice.service.UserService;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
+/**
+ * Implementation of the UserService.
+ * <p>
+ * Behavior highlights:
+ * - Validates uniqueness constraints before attempting to save.
+ * - Uses ModelMapper for entity <-> DTO conversion.
+ * - Returns a StandardResponse wrapper for consistent API responses.
+ */
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     private final Logger logger = Logger.getLogger(UserServiceImpl.class.getName());
     private final UserRepository userRepository;
+    private final ModelMapper modelMapper;
 
     @Override
     public StandardResponse getAllUsers() {
-        try{
+        try {
             logger.fine("Fetching all users from database");
-            List<UserDTO> users = userRepository.findAll().stream()
-                    .map(this::convertToDTO)
-                    .collect(Collectors.toList());
+            List<UserDTO> users = userRepository.findAll()
+                    .stream()
+                    .map(user -> modelMapper.map(user, UserDTO.class))
+                    .toList();
+
             logger.fine("Found " + users.size() + " users in database");
             return StandardResponse.success(users);
         } catch (RuntimeException e) {
+            logger.severe("Failed to retrieve users: " + e.getMessage());
             return StandardResponse.error("Failed to retrieve users", e.getMessage());
         }
     }
 
+    /**
+     * Create a new user.
+     * <p>
+     * Pre-save checks:
+     * - If userRequestDTO.id is provided and already exists in DB -> reject (DuplicateResourceException).
+     * - If email is already used by another user -> reject (DuplicateResourceException).
+     * <p>
+     * This method is transactional to ensure atomicity of the existence checks and the save.
+     *
+     * @param userRequestDTO request payload for new user
+     * @return StandardResponse with created UserDTO on success, or error details on failure
+     */
     @Override
+    @Transactional
     public StandardResponse<UserDTO> saveUser(UserRequestDTO userRequestDTO) {
         try {
-            logger.fine("Creating new user with username: " + userRequestDTO.getUsername() + 
-                        " and email: " + userRequestDTO.getEmail());
-            
+            logger.fine("Creating new user with username: " + userRequestDTO.getUsername() +
+                    " and email: " + userRequestDTO.getEmail());
+
+            // Validate email uniqueness
+            String email = userRequestDTO.getEmail();
+            if (email != null && !email.isBlank()) {
+                logger.fine("Checking email uniqueness for: " + email);
+                if (userRepository.findByEmail(email).isPresent()) {
+                    String message = "Email already in use: " + email;
+                    logger.warning(message);
+                    throw new DuplicateResourceException(message);
+                }
+            } else {
+                String message = "Email must be provided";
+                logger.warning(message);
+                return StandardResponse.error("Validation failed", message);
+            }
+
+            // Build entity and save
             UserEntity userEntity = UserEntity.builder()
                     .username(userRequestDTO.getUsername())
                     .password(userRequestDTO.getPassword())
                     .email(userRequestDTO.getEmail())
                     .build();
-            
+
             UserEntity savedUser = userRepository.save(userEntity);
             logger.info("User created successfully with id: " + savedUser.getId());
-            return StandardResponse.success("User created successfully", convertToDTO(savedUser));
+            return StandardResponse.success("User created successfully", modelMapper.map(savedUser, UserDTO.class));
+        } catch (DuplicateResourceException e) {
+            // Known business validation error -> return a friendly error response
+            logger.warning("Duplicate resource: " + e.getMessage());
+            return StandardResponse.error("Duplicate resource", e.getMessage());
         } catch (Exception e) {
+            // Unexpected exception
             logger.severe("Error creating user: " + e.getMessage());
             return StandardResponse.error("Failed to create user", e.getMessage());
         }
@@ -84,7 +132,7 @@ public class UserServiceImpl implements UserService {
                         return new UserNotFoundException("User not found with email: " + email);
                     });
             logger.fine("User found with email: " + email);
-            return StandardResponse.success("User retrieved successfully", convertToDTO(userEntity));
+            return StandardResponse.success("User retrieved successfully", modelMapper.map(userEntity, UserDTO.class));
         } catch (UserNotFoundException e) {
             logger.warning("User not found with email: " + email);
             return StandardResponse.error("User not found", e.getMessage());
@@ -104,7 +152,7 @@ public class UserServiceImpl implements UserService {
                         return new UserNotFoundException("User not found with id: " + id);
                     });
             logger.fine("User found with id: " + id);
-            return StandardResponse.success("User retrieved successfully", convertToDTO(userEntity));
+            return StandardResponse.success("User retrieved successfully", modelMapper.map(userEntity, UserDTO.class));
         } catch (UserNotFoundException e) {
             logger.warning("User not found with id: " + id);
             return StandardResponse.error("User not found", e.getMessage());
@@ -112,13 +160,5 @@ public class UserServiceImpl implements UserService {
             logger.severe("Error retrieving user: " + e.getMessage());
             return StandardResponse.error("Failed to retrieve user", e.getMessage());
         }
-    }
-
-    private UserDTO convertToDTO(UserEntity userEntity) {
-        return UserDTO.builder()
-                .id(userEntity.getId())
-                .username(userEntity.getUsername())
-                .email(userEntity.getEmail())
-                .build();
     }
 }
